--- a/events/templates/events/venue.html
+++ b/events/templates/events/venue.html
@@ -10,6 +10,7 @@
     {% for venue in venue_list %}
         <tr>
             <td><a href="{% url 'show-venue' venue.id %}">{{ venue }}</a></td>
+            <td class="text-end"><a href="{% url 'update-venue' venue.id %}" class="btn btn-outline-secondary btn-sm">Update</a></td>
         </tr>
     {% endfor %}
     </table>
