--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -30,6 +30,9 @@
                 </ul>
             </p>
         </div>
+        <div class="card-footer">
+            <a href="{% url 'update-event' event.id %}" class="btn btn-outline-secondary btn-sm">Update</a>
+        </div>
         </div>
         <br/>
     {% endfor %}
