video_13: delete items from the DB

--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -31,7 +31,10 @@
             </p>
         </div>
         <div class="card-footer">
-            <a href="{% url 'update-event' event.id %}" class="btn btn-outline-secondary btn-sm">Update</a>
+            <div class="btn-group">
+                <a href="{% url 'update-event' event.id %}" class="btn btn-outline-secondary btn-sm">Update</a>
+                <a href="{% url 'delete-event' event.id %}" class="btn btn-outline-danger btn-sm">Delete</a>
+            </div>
         </div>
         </div>
         <br/>
