--- a/events/templates/events/venue.html
+++ b/events/templates/events/venue.html
@@ -10,7 +10,12 @@
     {% for venue in venue_list %}
         <tr>
             <td><a href="{% url 'show-venue' venue.id %}">{{ venue }}</a></td>
-            <td class="text-end"><a href="{% url 'update-venue' venue.id %}" class="btn btn-outline-secondary btn-sm">Update</a></td>
+            <td class="text-end">
+                <div class="btn-group">
+                <a href="{% url 'update-venue' venue.id %}" class="btn btn-outline-secondary btn-sm">Update</a>
+                <a href="{% url 'delete-venue' venue.id %}" class="btn btn-outline-danger btn-sm">Delete</a>
+            </div>
+            </td>
         </tr>
     {% endfor %}
     </table>
