--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'add-venue' %}">Add Venue</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'venues-text' %}">Venues TextFile</a>
+        </li>
       </ul>
       <form class="d-flex" role="search" method=POST action="{% url 'search-venues' %}">
           {% csrf_token %}
